# TrafficSimulator2021Aalto

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md
input_file/: samplecity.txt
interface/: CustomView.cpp  CustomView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressbar.cpp  progressbar.h  progressbar.ui  simulationView.cpp  simulationView.h  simulationview.ui  startwindow.cpp  startwindow.h  startwindow.ui
libs/: readme.md
output_file/: output.csv
src/: Building.cpp  Car.cpp  CityObject.cpp  Navigator.cpp  Person.cpp  Simulation.cpp  Vehicle.cpp  buildingexitcrossroad.cpp  cityclass.cpp  crossroadclass.cpp  main.cpp  readme.md  roadlineclass.cpp  roadobjectclass.cpp  trafficlightcrossroad.cpp  unregulatedcrossroad.cpp
src/include/: Building.hpp  Car.hpp  CityObject  CityObject.hpp  Navigator.hpp  Person.hpp  Simulation.hpp  Vehicle.hpp  buildingexitcrossroad.hpp  cityclass.hpp  crossroadclass.hpp  exceptions.hpp  roadlineclass.hpp  roadobjectclass.hpp  trafficlightcrossroad.hpp  unregulatedcrossroad.hpp
tests/: NavigatorTest.cpp  PersonTest.cpp  instructions.md
